Renamed elements to conform to BNF schema. Added component-adapter element. Aliased component-implementation to component.